--- a/car_form.html
+++ b/car_form.html
@@ -12,6 +12,10 @@
                  <label for="price">Enter Maximum Price:</label>
                  <input id="price" name="price" class="form-control" type="number">
              </div>
+             <div class="form-group">
+                <label for="miles">Enter Maximum Miles:</label>
+                <input id="miles" name="miles" class="form-control" type="number">
+            </div>
              <button type="submit" class="btn-success">Submit</button>
           </form>
     </div>
